--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
+* {
+  background-color: antiquewhite;
+  align-items: left;
+  margin: 7vmin;
+}
+
 .App {
   text-align: center;
+}
+
+button {
+  background-color: #61dafb;
+  width: 5vmin;
+  height: 5vmin;
+  border: #282c34;
 }
 
 .App-logo {
@@ -32,6 +45,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
